# scara

./: README.md
scara_command/: CMakeLists.txt  package.xml
scara_command/launch/: pos_kinematic.launch
scara_command/src/: get_homogeneous.py  helper.py  joint3_controller.py  joints_controller.py  joints_pos_controller.py  joints_vel_controller.py  scara_FK_server.py  scara_IK_server.py  scara_VK_server.py  scara_connector.py  switch_control.py
scara_command/srv/: CheckKinFK.srv  CheckKinIK.srv  ScaraHomoMatrix.srv  ScaraKinFK.srv  ScaraKinIK.srv  ScaraVelFK.srv  ScaraVelIK.srv  SetCartesianVel.srv  SetJointRef.srv  SwitchControl.srv
scara_control/: CMakeLists.txt  package.xml
scara_control/config/: scara2_control.yaml  scara_control.yaml
scara_control/launch/: scara2_control.launch  scara_control.launch
scara_description/: CMakeLists.txt  package.xml
scara_description/launch/: scara.rviz  scara2_rviz.launch  scara_rviz.launch
scara_description/urdf/: materials.xacro  scara.gazebo  scara.xacro  scara2.xacro
scara_gazebo/: CMakeLists.txt  package.xml
scara_gazebo/launch/: scara2_world.launch  scara_world.launch
scara_gazebo/worlds/: scara.world
