<package>
  <name>scara_gazebo</name>
  <version>0.0.0</version>
  <description>The scara_gazebo package</description>

  <maintainer email="team8@todo.todo">team_8</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>scara_control</run_depend>
  <run_depend>scara_description</run_depend>
  <run_depend>xacro</run_depend>

  <export></export>
</package>
